--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
@@ -1,20 +1,8 @@
 .contenedor{
   margin-top: 9%;
 }
-
-#btn{
-  background-color: #989898;
-  color: white;
-  font-weight: bold;
-}
-#btn:hover{
-  background-color: #34adfc;
-}
-
-.nuevo{
+.buscador{
   margin-left: 5%;
-  display: grid;
-  grid-template-columns: max-content 1fr;
 }
 /*estilos para la tabla de registros*/
 .tabla-contenedor{
@@ -36,21 +24,10 @@ th {
   z-index: 1;
   color: white;
 }
-.editar{
+.ver{
   cursor: pointer;
 }
-/*estilos para el modal*/
-.modal-header{
-  background-color: #0074cb;
-  color: white;
-  font-weight: bold;
-}
-.col-12{
-  margin-top: 5%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 
 /*estilos para el buscador*/
 .group {
@@ -59,7 +36,6 @@ th {
   align-items: center;
   position: relative;
   max-width: 190px;
-  margin-left: 75%;
  }
 
  .input {
@@ -99,6 +75,9 @@ th {
   .contenedor{
     margin-top: 30%;
   }
+  .buscador{
+    margin-left: 0;
+  }
   td, th{
     font-size: 12px;
   }
@@ -109,7 +88,7 @@ th {
     font-size: 14px;
   }
   .group {
-    max-width: 150px;
+    max-width: 200px;
     margin-left: 15%;
   }
 }
