--- a/calidadFrontend/src/app/header/header.component.html
+++ b/calidadFrontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <img src="assets/img-logo/Letras_Airtemp.png" alt="Bootstrap" width="30%" height="30%">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
