--- a/calidadFrontend/src/app/vista-empleado/vista-empleado.component.html
+++ b/calidadFrontend/src/app/vista-empleado/vista-empleado.component.html
@@ -1,6 +1,6 @@
 <body>
   <section class="header">
-    aqui va el encabezado
+    <app-header-movil></app-header-movil>
   </section>
   <section class="contenedor">
     <section class="registros">
