--- a/calidadFrontend/src/app/regis-departamentos/regis-departamentos.component.html
+++ b/calidadFrontend/src/app/regis-departamentos/regis-departamentos.component.html
@@ -15,20 +15,20 @@
         <thead>
           <tr>
             <th scope="col">Número</th>
-            <th scope="col">Nombre</th>
+            <th scope="col">Nombre del departamento</th>
             <th scope="col">Encargado</th>
             <th scope="col">Tipo</th>
             <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody class="table-group-divider">
-          <tr>
-            <td>105</td>
-            <td>HORNOS E INSPECCIÓN DE FUGAS</td>
-            <td>Fredy Canul / Guadalupe</td>
-            <td>Común</td>
+          <tr *ngFor="let departamento of departamentos">
+            <td>{{departamento.numero}}</td>
+            <td>{{departamento.nombre}}</td>
+            <td>{{departamento.encargado}}</td>
+            <td>{{departamento.tipo}}</td>
             <td>
-              <svg class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+              <svg (click)="editDepto(departamento.id)" class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                 <title>Editar</title><path fill="#eab308" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h8.925l-2 2H5v14h14v-6.95l2-2V19q0 .825-.587 1.413T19 21zm4-6v-4.25l9.175-9.175q.3-.3.675-.45t.75-.15q.4 0 .763.15t.662.45L22.425 3q.275.3.425.663T23 4.4q0 .375-.137.738t-.438.662L13.25 15zM21.025 4.4l-1.4-1.4zM11 13h1.4l5.8-5.8l-.7-.7l-.725-.7L11 11.575zm6.5-6.5l-.725-.7zl.7.7z"/></svg>
             </td>
           </tr>
@@ -46,33 +46,33 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row">
+        <form class="row" (ngSubmit)="submit(form.value)" #form="ngForm">
           <div class="col-md-6">
             <label for="validationDefaultNumero" class="form-label" style="font-weight: bold;">Número</label>
-            <input type="text" class="form-control" id="validationDefaultNumero" value="105" required>
+            <input [(ngModel)]="crearDpto.numero" name="numero" type="number" class="form-control" id="validationDefaultNumero" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultNombre" class="form-label" style="font-weight: bold;">Nombre</label>
-            <input type="text" class="form-control" id="validationDefaulNombre" value="HORNOS E INSPECCIÓN DE FUGAS" required>
+            <input [(ngModel)]="crearDpto.nombre" name="nombre" type="text" class="form-control" id="validationDefaulNombre" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultEncargado" class="form-label" style="font-weight: bold;">Encargado</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultEncargado" value="Fredy Canul / Guadalupe" required>
+              <input [(ngModel)]="crearDpto.encargado" name="encargado" type="text" class="form-control" id="validationDefaultEncargado">
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultTipo" class="form-label" style="font-weight: bold;">Tipo</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
+              <select [(ngModel)]="crearDpto.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="Activo">Común</option>
-                <option value="Inactivo">Dedicada</option>
+                <option value="Común">Común</option>
+                <option value="Dedicada">Dedicada</option>
               </select>
             </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-primary" type="submit">Agregar</button>
+            <button class="btn btn-primary" [disabled]="!form.valid" type="submit">Agregar</button>
           </div>
         </form>
       </div>
@@ -88,33 +88,33 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row">
+        <form class="row" (ngSubmit)="submitedit(form.value)" #form="ngForm">
           <div class="col-md-6">
             <label for="validationDefaultNumero" class="form-label" style="font-weight: bold;">Número</label>
-            <input type="text" class="form-control" id="validationDefaultNumero" value="105" required>
+            <input [(ngModel)]="crearDpto.numero" name="numero" type="text" class="form-control" id="validationDefaultNumero" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultNombre" class="form-label" style="font-weight: bold;">Nombre</label>
-            <input type="text" class="form-control" id="validationDefaulNombre" value="HORNOS E INSPECCIÓN DE FUGAS" required>
+            <input [(ngModel)]="crearDpto.nombre" name="nombre" type="text" class="form-control" id="validationDefaulNombre" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultEncargado" class="form-label" style="font-weight: bold;">Encargado</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultEncargado" value="Fredy Canul / Guadalupe" required>
+              <input [(ngModel)]="crearDpto.encargado" name="encargado" type="text" class="form-control" id="validationDefaultEncargado" required>
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultTipo" class="form-label" style="font-weight: bold;">Tipo</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
+              <select [(ngModel)]="crearDpto.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="Activo">Común</option>
-                <option value="Inactivo">Dedicada</option>
+                <option value="Común">Común</option>
+                <option value="Dedicada">Dedicada</option>
               </select>
             </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-warning" type="submit">Editar</button>
+            <button class="btn btn-warning" [disabled]="!form.valid" type="submit" data-bs-dismiss="modal">Editar</button>
           </div>
         </form>
       </div>
