--- a/calidadFrontend/src/app/login/login.component.html
+++ b/calidadFrontend/src/app/login/login.component.html
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn" type="submit">Ingresar</button>
+          <button class="btn" type="submit" routerLink="/admin">Ingresar</button>
         </div>
       </form>
     </section>
