--- a/calidadFrontend/src/app/regis-partes/regis-partes.component.html
+++ b/calidadFrontend/src/app/regis-partes/regis-partes.component.html
@@ -4,7 +4,7 @@
   </section>
   <section class="contenedor">
     <section class="nuevo">
-      <button type="button" id="btn" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Nuevo #parte</button>
+      <button (click)="nuevo()" type="button" id="btn" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Nuevo #parte</button>
       <div class="group">
         <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
         <input placeholder="Buscar" type="search" class="input">
@@ -18,19 +18,19 @@
             <th scope="col">Descripción del Material</th>
             <th scope="col">Tipo</th>
             <th scope="col">Cliente</th>
-            <th scope="col">Código Máquina</th>
+            <th scope="col">No Depto</th>
             <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody class="table-group-divider">
-          <tr>
-            <td>03110BA39</td>
-            <td>TANQUE DE ENTRADA RADIADOR BVA SMART CAR (1+1)</td>
-            <td>PREENSAMBLE</td>
-            <td>INTERNO</td>
-            <td>105</td>
+          <tr *ngFor="let parte of partes">
+            <td>{{parte.numero}}</td>
+            <td>{{parte.descripcion}}</td>
+            <td>{{parte.tipo}}</td>
+            <td>{{parte.cliente}}</td>
+            <td>{{parte.departamento}}</td>
             <td>
-              <svg class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+              <svg (click)="editPrt(parte.id)" class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                 <title>Editar</title><path fill="#eab308" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h8.925l-2 2H5v14h14v-6.95l2-2V19q0 .825-.587 1.413T19 21zm4-6v-4.25l9.175-9.175q.3-.3.675-.45t.75-.15q.4 0 .763.15t.662.45L22.425 3q.275.3.425.663T23 4.4q0 .375-.137.738t-.438.662L13.25 15zM21.025 4.4l-1.4-1.4zM11 13h1.4l5.8-5.8l-.7-.7l-.725-.7L11 11.575zm6.5-6.5l-.725-.7zl.7.7z"/></svg>
             </td>
           </tr>
@@ -48,19 +48,19 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row">
+        <form class="row" (ngSubmit)="submit(form.value)" #form="ngForm">
           <div class="col-md-6">
             <label for="validationDefaultCodPO" class="form-label" style="font-weight: bold;">Código Producto/Operación</label>
-            <input type="text" class="form-control" id="validationDefaultCodPO" value="" required>
+            <input [(ngModel)]="crearPrt.numero" name="numero" type="text" class="form-control" id="validationDefaultCodPO" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultDescripcion" class="form-label" style="font-weight: bold;">Descripción del Máterial</label>
-            <input type="text" class="form-control" id="validationDefaulDescripcion" value="" required>
+            <input [(ngModel)]="crearPrt.descripcion" name="descripcion" type="text" class="form-control" id="validationDefaulDescripcion" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultTipo" class="form-label" style="font-weight: bold;">Tipo</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
+              <select [(ngModel)]="crearPrt.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
                 <option value="PREENSAMBLE">PREENSAMBLE</option>
                 <option value="PRODUCTO TERMINADO">PRODUCTO TERMINADO</option>
@@ -71,21 +71,19 @@
           </div>
           <div class="col-md-6">
             <label for="validationDefaultCliente" class="form-label" style="font-weight: bold;">Cliente</label>
-            <input type="text" class="form-control" id="validationDefaulCliente" value="" required>
+            <input [(ngModel)]="crearPrt.cliente" name="cliente" type="text" class="form-control" id="validationDefaulCliente" required>
           </div>
           <div class="col-md-6">
-            <label for="validationDefaultCodMq" class="form-label" style="font-weight: bold;">Código Máquina</label>
+            <label for="validationDefaultCodMq" class="form-label" style="font-weight: bold;">Departamento</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultCodMq" aria-label="Default select example" required>
+              <select [(ngModel)]="crearPrt.departamento" name="departamento" class="form-select" id="validationDefaultCodMq" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="100">100</option>
-                <option value="108">108</option>
-                <option value="131">131</option>
+                <option *ngFor="let departamento of departamentos" [value]="departamento.numero">{{departamento.nombre}}</option>
               </select>
             </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-primary" type="submit">Agregar</button>
+            <button class="btn btn-primary" [disabled]="!form.valid" type="submit">Agregar</button>
           </div>
         </form>
       </div>
@@ -101,19 +99,19 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row">
+        <form class="row" (ngSubmit)="submitedit(form.value)" #form="ngForm">
           <div class="col-md-6">
             <label for="validationDefaultCodPO" class="form-label" style="font-weight: bold;">Código Producto/Operación</label>
-            <input type="text" class="form-control" id="validationDefaultCodPO" value="" required>
+            <input [(ngModel)]="crearPrt.numero" name="numero" type="text" class="form-control" id="validationDefaultCodPO" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultDescripcion" class="form-label" style="font-weight: bold;">Descripción del Máterial</label>
-            <input type="text" class="form-control" id="validationDefaulDescripcion" value="" required>
+            <input [(ngModel)]="crearPrt.descripcion" name="descripcion" type="text" class="form-control" id="validationDefaulDescripcion" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultTipo" class="form-label" style="font-weight: bold;">Tipo</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
+              <select [(ngModel)]="crearPrt.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
                 <option value="PREENSAMBLE">PREENSAMBLE</option>
                 <option value="PRODUCTO TERMINADO">PRODUCTO TERMINADO</option>
@@ -124,21 +122,19 @@
           </div>
           <div class="col-md-6">
             <label for="validationDefaultCliente" class="form-label" style="font-weight: bold;">Cliente</label>
-            <input type="text" class="form-control" id="validationDefaulCliente" value="" required>
+            <input [(ngModel)]="crearPrt.cliente" name="cliente" type="text" class="form-control" id="validationDefaulCliente" required>
           </div>
           <div class="col-md-6">
-            <label for="validationDefaultCodMq" class="form-label" style="font-weight: bold;">Código Máquina</label>
+            <label for="validationDefaultCodMq" class="form-label" style="font-weight: bold;">Departamento</label>
             <div class="input-group">
-              <select class="form-select" id="validationDefaultCodMq" aria-label="Default select example" required>
+              <select [(ngModel)]="crearPrt.departamento" name="departamento" class="form-select" id="validationDefaultCodMq" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="100">100</option>
-                <option value="108">108</option>
-                <option value="131">131</option>
+                <option *ngFor="let departamento of departamentos" [value]="departamento.numero">{{departamento.nombre}}</option>
               </select>
             </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-warning" type="submit">Editar</button>
+            <button class="btn btn-warning" [disabled]="!form.valid" type="submit">Editar</button>
           </div>
         </form>
       </div>
