--- a/calidadFrontend/src/app/vista-empleado/vista-empleado.component.html
+++ b/calidadFrontend/src/app/vista-empleado/vista-empleado.component.html
@@ -5,11 +5,11 @@
   <section class="contenedor">
     <section class="registros">
       <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 16 16"><path fill="#0284c7" d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M8.5 7v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 1 0"/></svg>
-      <button class="btn">Nuevo Registro</button>
+      <button routerLink="/formulario" class="btn">Nuevo Registro</button>
     </section>
     <section class="informacion">
       <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 20 20"><path fill="#0284c7" d="M10 2v4.5A1.5 1.5 0 0 0 11.5 8H16v8.5a1.5 1.5 0 0 1-1.5 1.5h-4c.306-.425.5-.927.5-1.5l.001-3.947l.001-2.247l-.009.008c-.104-1.421-1.389-2.363-2.645-2.83a7.508 7.508 0 0 0-1.293-.349A8.86 8.86 0 0 0 5.5 7c-.515 0-1.02.043-1.5.126V3.5A1.5 1.5 0 0 1 5.5 2zm1 .25V6.5a.5.5 0 0 0 .5.5h4.25zM6.88 8.12c.4.071.777.173 1.12.3c1.206.45 2 1.213 2 2.08c0 1.38-2.015 2.5-4.5 2.5S1 11.88 1 10.5S3.015 8 5.5 8c.481 0 .945.042 1.38.12M5.5 14c1.38 0 2.679-.309 3.668-.858c.293-.163.578-.36.833-.59L10 16.5c0 1.38-2.015 2.5-4.5 2.5S1 17.88 1 16.5v-3.945c.255.23.54.425.832.588c.99.55 2.288.858 3.668.858"/></svg>
-      <button class="btn">Ver mis registros</button>
+      <button routerLink="/misregistros" class="btn">Ver mis registros</button>
     </section>
   </section>
 </body>
