--- a/calidadFrontend/src/app/regis-empleados/regis-empleados.component.html
+++ b/calidadFrontend/src/app/regis-empleados/regis-empleados.component.html
@@ -36,87 +36,6 @@
                 <title>Editar</title><path fill="#eab308" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h8.925l-2 2H5v14h14v-6.95l2-2V19q0 .825-.587 1.413T19 21zm4-6v-4.25l9.175-9.175q.3-.3.675-.45t.75-.15q.4 0 .763.15t.662.45L22.425 3q.275.3.425.663T23 4.4q0 .375-.137.738t-.438.662L13.25 15zM21.025 4.4l-1.4-1.4zM11 13h1.4l5.8-5.8l-.7-.7l-.725-.7L11 11.575zm6.5-6.5l-.725-.7zl.7.7z"/></svg>
             </td>
           </tr>
-          <tr>
-            <td>2</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-            <td>ahsgh12</td>
-            <td>Activo</td>
-            <td>Editar</td>
-          </tr>
         </tbody>
       </table>
     </section>
@@ -134,28 +53,28 @@
         <form class="row">
           <div class="col-md-6">
             <label for="validationDefaultNombre" class="form-label" style="font-weight: bold;">Nombre</label>
-            <input type="text" class="form-control" id="validationDefaultNombre" value="Mark" required>
+            <input type="text" class="form-control" id="validationDefaultNombre" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultApellido" class="form-label" style="font-weight: bold;">Apellido</label>
-            <input type="text" class="form-control" id="validationDefaulApellido" value="Otto" required>
+            <input type="text" class="form-control" id="validationDefaulApellido" required>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultUsuario" class="form-label" style="font-weight: bold;">Usuario</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultUsuario" value="Mark2" required>
+              <input type="text" class="form-control" id="validationDefaultUsuario" required>
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultContrasenia" class="form-label" style="font-weight: bold;">Contraseña</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultContrasenia" value="Mark2313" required>
+              <input type="text" class="form-control" id="validationDefaultContrasenia" required>
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationDefaultDepartamento" class="form-label" style="font-weight: bold;">Departamento</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultDepartamento" value="Mark2" required>
+              <input type="text" class="form-control" id="validationDefaultDepartamento" required>
             </div>
           </div>
           <div class="col-md-6">
