--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
@@ -22,6 +22,25 @@
   justify-content: center;
   align-items: center;
 }
+/*estilos para agregar los defectos*/
+.modal-header{
+  background-color: #005ba2;
+  color: white;
+}
+.tabla-defecto{
+  background-color: gray;
+  padding: 0 2%;
+  margin-top: 5%;
+}
+.listado{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.boton{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @media (max-width: 600px) {
   .contenedor{
