--- a/calidadFrontend/src/app/regis-maquinas/regis-maquinas.component.html
+++ b/calidadFrontend/src/app/regis-maquinas/regis-maquinas.component.html
@@ -65,7 +65,7 @@
           <div class="col-md-6">
             <label for="validationDefaultCodProc" class="form-label" style="font-weight: bold;">Código Interno de Proceso</label>
             <div class="input-group">
-              <input [(ngModel)]="crearMq.codproceso" name="codproceso" type="text" class="form-control" id="validationDefaultCodProc" required>
+              <input [(ngModel)]="crearMq.codproceso" name="codproceso" type="text" class="form-control" id="validationDefaultCodProc">
             </div>
           </div>
           <div class="col-md-6">
@@ -106,7 +106,7 @@
           <div class="col-md-6">
             <label for="validationDefaultCodProc" class="form-label" style="font-weight: bold;">Código Interno de Proceso</label>
             <div class="input-group">
-              <input [(ngModel)]="crearMq.codproceso" name="codproceso" type="text" class="form-control" id="validationDefaultCodProc" required>
+              <input [(ngModel)]="crearMq.codproceso" name="codproceso" type="text" class="form-control" id="validationDefaultCodProc" >
             </div>
           </div>
           <div class="col-md-6">
