--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
@@ -44,15 +44,24 @@
 
 @media (max-width: 600px) {
   .contenedor{
-    margin-top: 15%;
+    margin-top: 18%;
   }
   #botones{
     margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #botones #btn{
+    width: 40%;
   }
   #ver{
     margin-top: 10%;
   }
   #btn{
     width: 100%;
+  }
+  select{
+    font-size: 12px;
   }
 }
