--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.html
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.html
@@ -97,10 +97,13 @@
           </div>
         </div>
         <div class="row" id="botones">
-            <button [disabled]="!form.valid" class="btn btn-primary" *ngIf="valorInput === null || valorInput <= 0" type="submit"  id="btn">
-              Registrar</button>
-            <button id="btn" (click)="valores()" class="btn btn-primary" type="submit" *ngIf="valorInput != 0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              Defectos</button>
+          <button [disabled]="!form.valid || crearRegis.pzainspc === 0 || crearRegis === null" class="btn btn-primary" *ngIf="valorInput === null || valorInput <= 0" type="submit" id="btn">
+            Registrar
+          </button>
+          <button (click)="resetaerDefectos()" id="btn" class="btn btn-primary" type="submit" *ngIf="valorInput != 0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            Defectos
+          </button>
+          <!--<p data-bs-toggle="modal" data-bs-target="#staticBackdrop">CLICK</p>-->
         </div>
       </form>
     </section>
@@ -118,11 +121,10 @@
         <section class="listado">
           <section class="selector">
             <label for="defecto" class="form-label" style="font-weight: bold;">Agregar los Defectos</label>
-            <p>id del registro: {{idCalidad}}</p>
+            <!--<p>id del registro: {{idCalidad}}</p>-->
             <select class="form-select" id="defecto" [(ngModel)]="defectoSeleccionado" aria-label="Default select example">
               <option selected disabled>Seleccionar</option>
-              <option value="OEM Maintenance">OEM Maintenance</option>
-              <option value="Assemble Aftermarket Modules">Assemble Aftermarket Modules</option>
+              <option *ngFor="let defecto of listaDefectos" [value]="defecto.tipodefecto">{{defecto.tipodefecto}}</option>
             </select>
           </section>
           <section class="boton">
@@ -137,53 +139,23 @@
                 <th scope="col">Acciones</th>
               </tr>
             </thead>
-            <tbody>
-              <tr *ngFor="let defecto of listaDefectos; let i = index">
-                <td>{{defecto}}</td>
-                <td><button class="btn btn-danger" (click)="eliminarDefecto(i)">Eliminar</button></td>
+            <tbody style="font-size: 13px;">
+              <tr *ngFor="let defecto of defectosAgregados">
+                <td>{{defecto.defecto}}</td>
+                <td>
+                  <svg style="cursor: pointer;" (click)="eliminarDefecto(defecto.id)" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="#dc2626" d="m9.4 16.5l2.6-2.6l2.6 2.6l1.4-1.4l-2.6-2.6L16 9.9l-1.4-1.4l-2.6 2.6l-2.6-2.6L8 9.9l2.6 2.6L8 15.1zM7 21q-.825 0-1.412-.587T5 19V6H4V4h5V3h6v1h5v2h-1v13q0 .825-.587 1.413T17 21z"/></svg>
+                </td>
               </tr>
-              <tr *ngIf="listaDefectos.length === 0">
+              <tr *ngIf="defectosAgregados.length === 0">
                 <td colspan="2">No hay defectos agregados</td>
               </tr>
             </tbody>
           </table>
         </section>
       </div>
-
-      <!--<div class="modal-body">
-        <section class="listado">
-          <section class="selector">
-            <label for="defecto" class="form-label" style="font-weight: bold;">Agregar los Defectos</label>
-            <select class="form-select" id="defecto" aria-label="Default select example">
-              <option selected disabled>Seleccionar</option>
-              <option value="OEM Maintenance">OEM Maintenance</option>
-              <option value="Assemble Aftermarket Modules">Assemble Aftermarket Modules</option>
-            </select>
-          </section>
-          <section class="boton">
-            <button class="btn btn-primary">Agregar</button>
-          </section>
-        </section>
-        <section class="tabla-defecto">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Defecto</th>
-                <th scope="col">Acciones</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
-      </div>-->
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Registrar</button>
+        <!--<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
+        <button (click)="resetaerDefectos()" type="button" data-bs-dismiss="modal" class="btn btn-primary" [disabled]="defectosAgregados.length === 0">Registrar</button>
       </div>
     </div>
   </div>
